Add example update() case

--- a/testapp/src/main/res/layout/activity_main.xml
+++ b/testapp/src/main/res/layout/activity_main.xml
@@ -4,14 +4,22 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="co.infinum.testapp.MainActivity">
+        android:gravity="center"
+        tools:context="co.infinum.testapp.activities.MainActivity">
 
-    <co.infinum.mjolnirrecyclerview.MjolnirRecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
 
-    <include
-            layout="@layout/empty_view"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_simple"
+            android:text="@string/simple_example"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/button_simple"
+            android:id="@+id/button_update"
+            android:text="@string/example_update"/>
+
 </RelativeLayout>
