Show empty view if adapter is not set

--- a/testapp/src/main/res/layout/activity_main.xml
+++ b/testapp/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button_simple"
+            android:layout_centerHorizontal="true"
             android:text="@string/simple_example"/>
 
     <Button
@@ -20,6 +21,16 @@
             android:layout_marginTop="10dp"
             android:layout_below="@+id/button_simple"
             android:id="@+id/button_update"
+            android:layout_centerHorizontal="true"
             android:text="@string/example_update"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/button_update"
+            android:id="@+id/button_empty_view"
+            android:layout_centerHorizontal="true"
+            android:text="@string/example_empty_view_with_no_adapter_set"/>
 
 </RelativeLayout>
