--- a/testapp/src/main/res/layout/activity_main.xml
+++ b/testapp/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
         android:gravity="center"
         tools:context="co.infinum.testapp.activities.MainActivity">
 
-
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,9 +17,17 @@
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/button_grid"
+            android:layout_below="@+id/button_simple"
+            android:layout_centerHorizontal="true"
+            android:text="@string/grid_example"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/button_simple"
+            android:layout_below="@+id/button_grid"
             android:id="@+id/button_update"
             android:text="@string/example_update"/>
 
